feat(main): add README.md

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello world</h1>
-    <h2>You are welcome</h2>
+<h1>Hello world</h1>
+<h2>You are welcome</h2>
+<h3>some text</h3>
 </body>
 </html>
